emv data is added

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
+URL=mongodb+srv://amelatbay:resource_1234@resourcecluster.rl7usbc.mongodb.net/?retryWrites=true&w=majority&appName=resourceCluster
 PORT=4000
